--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 
-poetry-core = "^1.0.2"
+poetry-core = { git = "https://github.com/python-poetry/poetry-core", branch = "make-factory-more-pluggable"}
 cleo = "^1.0.0a1"
 crashtest = "^0.3.0"
 requests = "^2.18"
@@ -39,6 +39,7 @@ pexpect = "^4.7.0"
 packaging = "^20.4"
 virtualenv = { version = "^20.0.26" }
 keyring = "^21.2.0"
+entrypoints = "^0.3"
 importlib-metadata = {version = "^1.6.0", python = "<3.8"}
 
 [tool.poetry.dev-dependencies]
